--- a/BannerOP.html
+++ b/BannerOP.html
@@ -62,6 +62,28 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
+                <img class="banniere" src="./img/Bannière/zoronoirfondu 12.54.10.jpeg" alt="zoro" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Roronoa Zoro</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Incrusté noir</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+              <img class="banniere" src="./img/Bannière/VOGUEkatakuri 12.54.10.JPG" alt="Katakuri" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Katakuri</p>
+                  <div class="appreciate-separator"></div>
+                  <p>VOGUE</p>
+              </div>
+          </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
                 <img class="banniere" src="./img/Bannière/robin&samereban.jpeg" alt="Robin" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Olvia et Robin</p>
