--- a/HxHP.html
+++ b/HxHP.html
@@ -265,7 +265,7 @@
                     <p>Kirua & Gon</p>
                     <p>TEAM</p>
                     <div class="appreciate-separator"></div>
-                    <p>Auteur: ?
+                    <p>Auteur: Acelem
                     </p>
                 </div>
             </li>
