--- a/OnepieceP.html
+++ b/OnepieceP.html
@@ -293,6 +293,48 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
+                <img class="tapion" src="./img/One piece/rayleigh.JPG" alt="Rayleigh" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Rayleigh</p>
+                    <p>White moon</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: Menphis</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/One piece/rogervsnewgate.JPG" alt="Roger" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Roger vs Newgate</p>
+                    <p>Choc de Légendes</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: ?</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img class="tapion" src="./img/One piece/katakurivsluffy.JPG" alt="Katakuri" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Katakuri Vs Luffy</p>
+                    <p>Monde des miroirs</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: Oda</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+              <img class="tapion" src="./img/One piece/robluccibase.JPG" alt="Lucci" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Rob Lucci</p>
+                  <p>Base form</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Auteur: Menphis</p>
+              </div>
+          </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
                 <img src="./img/One piece/SzboAceLuffy.JPG" alt="Luffyfreres" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Sabo, Ace & Luffy</p>
