--- a/SNKP.html
+++ b/SNKP.html
@@ -46,7 +46,7 @@
                     <p>Eren Jäger</p>
                     <p>Thinking</p>
                     <div class="appreciate-separator"></div>
-                    <p>Auteur: ?</p>
+                    <p>Auteur: Gabs</p>
                 </div>
             </li>
             <li class="appreciate-elem">
@@ -200,6 +200,48 @@
                   <p>Inspiration Manga</p>
                   <div class="appreciate-separator"></div>
                   <p>Auteur: DYM</p>
+              </div>
+          </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
+                <img src="./img/SNK/siegjager 13.11.44.jpeg" alt="Sieg" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Sieg Jäger</p>
+                    <p>Titan bestial</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: @AMINE_Uzumaki_</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/SNK/erenmikasaarminlivai 13.11.44.jpeg" alt="team" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Mikasa, Armin & Livaï</p>
+                    <p> Menace titan colossal </p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: XCLEMZ</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img class="tapion" src="./img/SNK/titancuirasse 13.11.44.jpeg" alt="Cuirasse" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Titan cuirassé</p>
+                    <p>Vs Eren & Mikasa</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: ?</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+              <img src="./img/SNK/LivaiErenMikasa 13.11.44.jpeg" alt="Livaï" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Livaï, Eren & Mikasa</p>
+                  <p>Action</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Auteur: XCLEMZ</p>
               </div>
           </li>
         </ul>
