--- a/focus.html
+++ b/focus.html
@@ -31,6 +31,75 @@
     <div class="articles-container">
       <h2 class="title-underline3" >RETROUVEZ TOUS LES FOCUS</h2>
       <div class="article">
+        <img src="./img/Focus/DYM/DYMpplaw.jpeg" alt="Dym">
+        <h2>DYMdraw</h2>
+        <div class="article-author">
+          <p>M. Lemercier</p>
+        </div>
+        <div class="article-content">
+          <p>Je promeus ce mois-ci <span class="gras">@DYMdraw</span>, pour ses dessins.
+            Il a commencé sa "carrière" par de simple fonds d'écrans. Mais il s'est vite tourné vers le dessin de personnages d'animés, il a acquis une tablette graphique pour dessiner. Ses dessins lui ont vite valus une certaine reconnaissance. 
+            Aujourd'hui il dessine un peu de tout, toujours dans son inspiration asiatique/japonaise. WALL. est heureux de le voir souvent s'associer avec @Astreoz pour de beaux fonds d'écrans. 
+            Il organise souvent des concours sympathiques avec un simple dessin que tout le monde peut télécharger. Il élit ensuite la personne qui aura réalisé le plus beau fond d'écran avec son dessin. Les récompenses varient mais le concept est cool, il permet aux débutants de s'éssayer, se lancer.
+            Il vit actuellement de sa passion puisqu'il a ouvert son e-shop dans lequel on peut retrouver une collection de vêtements avec ses dessins. Il est également ouvert aux commandes pour un dessin personnalisé. 
+            Je vous laisse ci-dessous quelques uns de ses dessins de personnages d'animés ainsi que son @ twitter/insta ! 
+            Au plaisir pour un nouveau focus :)</p>
+        </div>
+        <div class="article-date">
+          <p>Juillet 2020</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
+              <img src="./img/Focus/DYM/dymkakashidraw.jpeg" alt="Kakashi" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Kakashi Hatake</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Auteur: @DYMdraw</p>
+              </div>
+          </li>
+          <li class="appreciate-elem">
+            <img src="./img/Focus/DYM/dymluffydraw.jpeg" alt="Luffy" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Monkey D. Luffy</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: @DYMdraw</p>
+            </div>
+        </li>
+          <li class="appreciate-elem">
+            <img src="./img/Focus/DYM/dymitachidraw.jpeg" alt="itachi" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Itachi Uchiha</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: @DYMdraw</p>
+            </div>
+        </li>
+        <li class="appreciate-elem">
+          <img src="./img/Focus/DYM/dymshikamarudraw.jpeg" alt="Shikamaru" class="appreciate-elem-img">
+          <div class="appreciate-elem-text">
+              <p>Shikamaru Nara</p>
+              <div class="appreciate-separator"></div>
+              <p>Auteur: @DYMdraw</p>
+          </div>
+      </li>
+        </ul>
+    </div>
+  </section>
+  <div class="cover">
+    <a class="espacedroite" href="https://twitter.com/DYMdraw">
+      <i class="fab fa-twitter"></i>DYMdraw
+    </a>
+    <a class="espacegauche" href="https://www.instagram.com/DYMdraw/">
+      <i class="fab fa-instagram"></i>DYMdraw
+    </a>
+  </div>
+  <div class="content">
+    <div class="articles-container">
+      <div class="article">
         <img src="./img/Focus/Drawinoff/drawinoff.JPG" alt="Draw'¡noff">
         <h2>Draw'¡n</h2>
         <div class="article-author">
@@ -97,7 +166,7 @@
   <div class="content">
     <div class="articles-container">
       <div class="article">
-        <img src="./img/Cover/Coverxanimes.jpeg" alt="Coverxanimes">
+        <img src="./img/Focus/Coverxanimes/Coverxanimes.jpeg" alt="Coverxanimes">
         <h2>@Coverxanimes</h2>
         <div class="article-author">
           <p>M. Lemercier</p>
@@ -121,7 +190,7 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
-                <img src="./img/Cover/HxHcover.JPG" alt="HxH" class="appreciate-elem-img">
+                <img src="./img/Focus/Coverxanimes/HxHcover.JPG" alt="HxH" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Gon & Kirua</p>
                     <p>Ademo & N.O.S</p>
@@ -131,7 +200,7 @@
                 </div>
             </li>
             <li class="appreciate-elem">
-              <img src="./img/Cover/DoflamingoNinho.JPG" alt="Doflamingo" class="appreciate-elem-img">
+              <img src="./img/Focus/Coverxanimes/DoflamingoNinho.JPG" alt="Doflamingo" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
                   <p>Doflamingo</p>
                   <p>Ninho</p>
@@ -141,7 +210,7 @@
               </div>
           </li>
           <li class="appreciate-elem">
-            <img src="./img/Cover/Luffycover.JPG" alt="Luffy" class="appreciate-elem-img">
+            <img src="./img/Focus/Coverxanimes/Luffycover.JPG" alt="Luffy" class="appreciate-elem-img">
             <div class="appreciate-elem-text">
                 <p>Monkey D. Luffy</p>
                 <p>Booba</p>
@@ -151,7 +220,7 @@
             </div>
         </li>
         <li class="appreciate-elem">
-          <img src="./img/Cover/Paincover.JPG" alt="Pain" class="appreciate-elem-img">
+          <img src="./img/Focus/Coverxanimes/Paincover.JPG" alt="Pain" class="appreciate-elem-img">
           <div class="appreciate-elem-text">
               <p>Pain</p>
               <p>S.Pri Noir</p>
