--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                       <p>Naruto</p>
                       <p>Streetstyle</p>
                       <div class="appreciate-separator"></div>
-                      <p>Auteur: Froz</p>
+                      <p>Auteur: Froz x DYM</p>
                   </div>
               </li>
               <li class="appreciate-elem4">
@@ -156,16 +156,19 @@
       <div class="articles-container">
         <h2 class="title-underline2" >LE FOCUS</h2>
         <div class="article">
-          <img src="./img/Focus/Drawinoff/drawinoff.JPG" alt="Draw'¡noff">
-          <h2>Draw'¡n</h2>
+          <img src="./img/Focus/DYM/DYMpplaw.jpeg" alt="Dym">
+          <h2>DYMdraw</h2>
           <div class="article-author">
             <p>M. Lemercier</p>
           </div>
           <div class="article-content">
-            <p>Je promeus ce mois-ci <span class="gras">@Drawinoff</span>, pour son travail et son style personnel. Il dessine des personnages d'animés avec un style atypique. Le personnage apparaît déchiré, presque brulé des fois, et le moins que l'on puisse dire c'est qu'il a remporté un franc succès sur twitter! Les dessins sont très réussis, on ressent la patte de l'artiste.
-            Avec le soutien de ses fans, il a ouvert sa propre e-boutique, trouvable actuellement sur ses réseaux (disponibles ci-dessous). Dans cette dernière, on y retrouve ses dessins qu'il vend pour une modique somme.
-          Je vous conseille d'aller faire un tour sur son profil pour lui donner de la force même si je suis sur que vous irez directement vous abonner lorsque vous verrez ses dessins ci-dessous. Je vous laisse son @ twitter/insta juste en dessous!
-        Au plaisir pour un nouveau focus :)</p>
+            <p>Je promeus ce mois-ci <span class="gras">@DYMdraw</span>, pour ses dessins.
+              Il a commencé sa "carrière" par de simple fonds d'écrans. Mais il s'est vite tourné vers le dessin de personnages d'animés, il a acquis une tablette graphique pour dessiner. Ses dessins lui ont vite valus une certaine reconnaissance. 
+              Aujourd'hui il dessine un peu de tout, toujours dans son inspiration asiatique/japonaise. WALL. est heureux de le voir souvent s'associer avec @Astreoz pour de beaux fonds d'écrans. 
+              Il organise souvent des concours sympathiques avec un simple dessin que tout le monde peut télécharger. Il élit ensuite la personne qui aura réalisé le plus beau fond d'écran avec son dessin. Les récompenses varient mais le concept est cool, il permet aux débutants de s'éssayer, se lancer.
+              Il vit actuellement de sa passion puisqu'il a ouvert son e-shop dans lequel on peut retrouver une collection de vêtements avec ses dessins. Il est également ouvert aux commandes pour un dessin personnalisé. 
+              Je vous laisse ci-dessous quelques uns de ses dessins de personnages d'animés ainsi que ses réseaux sociaux. 
+              Au plaisir pour un nouveau focus :)</p>
           </div>
         </div>
       </div>
@@ -174,46 +177,46 @@
       <div class="container">
           <ul class="appreciate-list">
               <li class="appreciate-elem">
-                  <img src="./img/Focus/Drawinoff/HisokaDrawinoff.JPG" alt="Hisoka" class="appreciate-elem-img">
-                  <div class="appreciate-elem-text">
-                      <p>Hisoka Morow</p>
-                      <div class="appreciate-separator"></div>
-                      <p>Auteur: @drawinoff</p>
-                  </div>
-              </li>
-              <li class="appreciate-elem">
-                <img src="./img/Focus/Drawinoff/Kakashidrawinoff.JPG" alt="Kakashi" class="appreciate-elem-img">
+                <img src="./img/Focus/DYM/dymkakashidraw.jpeg" alt="Kakashi" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Kakashi Hatake</p>
                     <div class="appreciate-separator"></div>
-                    <p>Auteur: @drawinoff</p>
+                    <p>Auteur: @DYMdraw</p>
                 </div>
             </li>
             <li class="appreciate-elem">
-              <img src="./img/Focus/Drawinoff/ZoroDrawinoff.JPG" alt="Zoro" class="appreciate-elem-img">
+              <img src="./img/Focus/DYM/dymluffydraw.jpeg" alt="Luffy" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
-                  <p>Roronoa Zoro</p>
+                  <p>Monkey D. Luffy</p>
                   <div class="appreciate-separator"></div>
-                  <p>Auteur: @drawinoff</p>
+                  <p>Auteur: @DYMdraw</p>
+              </div>
+          </li>
+            <li class="appreciate-elem">
+              <img src="./img/Focus/DYM/dymitachidraw.jpeg" alt="itachi" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Itachi Uchiha</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Auteur: @DYMdraw</p>
               </div>
           </li>
           <li class="appreciate-elem">
-            <img src="./img/Focus/Drawinoff/TobiDrawinoff.JPG" alt="Tobi" class="appreciate-elem-img">
+            <img src="./img/Focus/DYM/dymshikamarudraw.jpeg" alt="Shikamaru" class="appreciate-elem-img">
             <div class="appreciate-elem-text">
-                <p>Tobi</p>
+                <p>Shikamaru Nara</p>
                 <div class="appreciate-separator"></div>
-                <p>Auteur: @drawinoff</p>
+                <p>Auteur: @DYMdraw</p>
             </div>
         </li>
           </ul>
       </div>
     </section>
     <div class="cover">
-      <a class="espacedroite" href="https://twitter.com/drawinoff">
-        <i class="fab fa-twitter"></i>Draw'¡n
+      <a class="espacedroite" href="https://twitter.com/DYMdraw">
+        <i class="fab fa-twitter"></i>DYMdraw
       </a>
-      <a class="espacegauche" href="https://www.instagram.com/drawinoff/">
-        <i class="fab fa-instagram"></i>Draw'¡n
+      <a class="espacegauche" href="https://www.instagram.com/DYMdraw/">
+        <i class="fab fa-instagram"></i>DYMdraw
       </a>
     </div>
     <footer>
