--- a/MHAP.html
+++ b/MHAP.html
@@ -73,7 +73,7 @@
                   <p>Izuku Midoriya</p>
                   <p>Walking in the city</p>
                   <div class="appreciate-separator"></div>
-                  <p>Auteur: ?</p>
+                  <p>Auteur: @CHOPAw_OBEZz</p>
               </div>
           </li>
         </ul>
@@ -85,7 +85,7 @@
             <li class="appreciate-elem">
                 <img src="./img/MHA/izuku&sameuf.jpeg" alt="Izuku&Ochoca" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
-                    <p>Izuku & Ochaca</p>
+                    <p>Izuku & Uraraka</p>
                     <p>Direction Yuei</p>
                     <div class="appreciate-separator"></div>
                     <p>Auteur: @__Loki__Loki__</p>
@@ -155,7 +155,7 @@
               <img src="./img/MHA/allmightjeune.jpeg" alt="All might" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
                   <p>ALL MIGHT</p>
-                  <p>Jeune - Inspiration manga</p>
+                  <p>Last punch</p>
                   <div class="appreciate-separator"></div>
                   <p>Auteur: @13_squid</p>
               </div>
@@ -170,7 +170,7 @@
               <img src="./img/MHA/mhateam.jpeg" alt="MHATEAM" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
                  <p>2ndA</p>
-                 <p>Izuku, Shoto, Ochaca, Iida, Tsuyu & Mezo</p>
+                 <p>Izuku, Shoto, Ochaco, Iida, Tsuyu & Mezo</p>
                   <div class="appreciate-separator"></div>
                  <p>Auteur: ?</p>
               </div>
@@ -223,7 +223,7 @@
                     <p>Fumikage Tokoyami</p>
                     <p>Raven</p>
                     <div class="appreciate-separator"></div>
-                    <p>Auteur: ?</p>
+                    <p>Auteur: @CHOPAw_OBEZz</p>
                 </div>
             </li>
             <li class="appreciate-elem">
