--- a/computerSNK.html
+++ b/computerSNK.html
@@ -60,11 +60,11 @@
   <div class="container">
       <ul class="appreciate-list">
           <li class="appreciate-elem">
-              <img class="fdepc" src="./img/PC/ErwinPC.jpg" alt="ErwinPC" class="appreciate-elem-img">
+              <img class="fdepc" src="./img/PC/ErwinSmithPC.png" alt="ErwinPC" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
                   <p>Erwin Smith</p>
                   <div class="appreciate-separator"></div>
-                  <p>Fédérateur</p>
+                  <p>Blessé</p>
               </div>
           </li>
           <li class="appreciate-elem">
