--- a/BannerMix.html
+++ b/BannerMix.html
@@ -42,7 +42,7 @@
             <li class="appreciate-elem">
               <img class="banniere" src="./img/Bannière/Mix/doflamingokakashi&.JPG" alt="DoflamingoKakashi" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
-                  <p>Doflamingo, Kakashi & ?</p>
+                  <p>Joestar, Doflamingo & Kakashi</p>
                   <div class="appreciate-separator"></div>
                   <p>Vestes phosphorescentes</p>
               </div>
