--- a/BannerNaruto.html
+++ b/BannerNaruto.html
@@ -50,9 +50,31 @@
           <li class="appreciate-elem">
             <img class="banniere" src="./img/Bannière/Yeuxitachi1stappearance.JPG" alt="Itachi" class="appreciate-elem-img">
             <div class="appreciate-elem-text">
-                <p>Itachi</p>
+                <p>Itachi Uchiwa</p>
                 <div class="appreciate-separator"></div>
                 <p>1st appearance</p>
+            </div>
+        </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
+                <img class="banniere" src="./img/Bannière/MissionSasukebanner 14.06.41.jpeg" alt="MissionSasuke" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Neji, Shikamaru, Naruto, Kiba & Shoji</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Mission récupération Sasuke</p>
+                </div>
+            </li>
+          <li class="appreciate-elem">
+            <img class="banniere" src="./img/Bannière/kakashivogueban.jpeg" alt="kakashi" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Kakashi Hatake</p>
+                <div class="appreciate-separator"></div>
+                <p>VOGUE</p>
             </div>
         </li>
         </ul>
