--- a/NarutoP.html
+++ b/NarutoP.html
@@ -167,6 +167,92 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
+                <img src="./img/Naruto/kisamehoshigakidraw.JPG" alt="Kisame Hoshigaki" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Kisame Hoshigaki</p>
+                    <p>Fan Illustration</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: @jan0sair</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/Naruto/painDYM 14.51.28.jpeg" alt="Pain" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Pain</p>
+                    <p>Concours
+                    </p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: DYM </p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/Naruto/itachidrawvrai.JPG" alt="itachidraw" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Itachi Uchiwa</p>
+                    <p>Fan Illustration</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: @jan0sair</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+              <img src="./img/Naruto/shikamarudraw.jpeg" alt="Shikamaru" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Shikamaru</p>
+                  <p>Night</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Auteur: DYM</p>
+              </div>
+          </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
+                <img src="./img/Naruto/madara2 14.51.27.jpeg" alt="MAdara" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Madara Uchiwa</p>
+                    <p>Flow</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: DYM</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/Naruto/narutokyubidesert 14.51.27.jpeg" alt="Naruto" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Naruto & Kyubi</p>
+                    <p>Desert
+                    </p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: Tark </p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/Naruto/Itachi&sasukeenfance.jpeg" alt="itachi" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Itachi & Sasuke Uchiwa</p>
+                    <p>Enfance</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: Tark</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+              <img src="./img/Naruto/Shisui3 14.51.28.jpeg" alt="Shisui" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Shisui Uchiwa</p>
+                  <p>Susanoo vert</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Auteur: Tark</p>
+              </div>
+          </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
                 <img src="./img/Naruto/Kakashikatana.png" alt="Kakashi" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Kakashi Hatake</p>
