--- a/OnepieceP.html
+++ b/OnepieceP.html
@@ -167,6 +167,48 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
+                <img src="./img/One piece/robinenfance.jpeg" alt="Robin" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Nico Robin</p>
+                    <p>enfance</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: ?</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/One piece/katakurichild 14.11.02.JPG" alt="katakurichild" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Charlotte Katakuri</p>
+                    <p>Child</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: @CHOPAw_OBEZz</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+              <img src="./img/One piece/luffymonkey.jpeg" alt="Luffy" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Monkey D. Luffy</p>
+                  <p>Monkey</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Auteur: Astreoz x DYM</p>
+              </div>
+          </li>
+            <li class="appreciate-elem">
+              <img class="tapion" src="./img/One piece/aokijiprime.jpeg" alt="Aokiji" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Aokiji</p>
+                  <p>Background prime</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Auteur: ?</p>
+              </div>
+          </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
                 <img src="./img/One piece/LAW.jpeg" alt="Law" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Trafalgar D. Water Law</p>
