--- a/computerNaruto.html
+++ b/computerNaruto.html
@@ -78,6 +78,28 @@
       </ul>
   </div>
 </section>
+<section id="Appreciate" class="appreciate">
+  <div class="container">
+      <ul class="appreciate-list">
+          <li class="appreciate-elem">
+              <img class="fdepc" src="./img/PC/orochimaruPC.png" alt="orochimaruPC" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Orochimaru</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Minimalist</p>
+              </div>
+          </li>
+          <li class="appreciate-elem">
+            <img class="fdepc" src="./img/PC/itachikisamePC.jpeg" alt="Akatsuki" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Itachi & Kisame</p>
+                <div class="appreciate-separator"></div>
+                <p>Fan illustration</p>
+            </div>
+        </li>
+      </ul>
+  </div>
+</section>
 <footer>
   <aside>
     <div class="block">
