--- a/BannerOP.html
+++ b/BannerOP.html
@@ -106,6 +106,28 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
+                <img class="banniere" src="./img/Bannière/sabobannerfire.jpeg" alt="sabo" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Sabo</p>
+                    <div class="appreciate-separator"></div>
+                    <p>FEU</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+              <img class="banniere" src="./img/Bannière/namiban.jpeg" alt="nami" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Nami</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Summer</p>
+              </div>
+          </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
               <img class="banniere" src="./img/Bannière/BannerluffyMin.JPG" alt="Luffy" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
                   <p>Monkey D. Luffy</p>
