--- a/Deathnotep.html
+++ b/Deathnotep.html
@@ -46,7 +46,7 @@
                     <p>Ryuk</p>
                     <p>Dieu de la mort</p>
                     <div class="appreciate-separator"></div>
-                    <p>Auteur: ?</p>
+                    <p>Auteur: Gabs</p>
                 </div>
             </li>
             <li class="appreciate-elem">
