--- a/index.html
+++ b/index.html
@@ -220,26 +220,25 @@
       </a>
     </div>
     <footer>
-      <aside>
         <div class="block">
             <h2>SOCIAL</h2>
-            <div class="social-container">
+            <div class="block-social">
+              <div class="block-social-container">
                 <i class="fab fa-twitter"></i>
                 <a href="https://twitter.com/vlemrc">@vlemrc</a>
-            </div>
-            <div class="social-container">
+              </div>
+              <div class="block-social-container">
                 <i class="fab fa-snapchat"></i>
                 <a href="#">Vicoboss7</a>
-            </div>
-            <div class="social-container">
+              </div>
+              <div class="block-social-container">
                 <i class="fab fa-instagram"></i>
                 <a href="https://www.instagram.com/vlemrc/">@vlemrc</a>
+              </div>
             </div>
-        </div>
-    </aside>
-      <p>
-          Copyright © 2020 M.LEMERCIER, Inc.
-      </p>
-  </footer>
+          <p>
+            Copyright © 2020 M.LEMERCIER, Inc.
+          </p>
+    </footer>
   </body>
 </html>
