--- a/BannerMix.html
+++ b/BannerMix.html
@@ -59,26 +59,25 @@
     </div>
   </section>
   <footer>
-    <aside>
-      <div class="block">
-          <h2>SOCIAL</h2>
-          <div class="social-container">
-              <i class="fab fa-twitter"></i>
-              <a href="https://twitter.com/vlemrc">@vlemrc</a>
+    <div class="block">
+        <h2>SOCIAL</h2>
+        <div class="block-social">
+          <div class="block-social-container">
+            <i class="fab fa-twitter"></i>
+            <a href="https://twitter.com/vlemrc">@vlemrc</a>
           </div>
-          <div class="social-container">
-              <i class="fab fa-snapchat"></i>
-              <a href="#">Vicoboss7</a>
+          <div class="block-social-container">
+            <i class="fab fa-snapchat"></i>
+            <a href="#">Vicoboss7</a>
           </div>
-          <div class="social-container">
-              <i class="fab fa-instagram"></i>
-              <a href="https://www.instagram.com/vlemrc/">@vlemrc</a>
+          <div class="block-social-container">
+            <i class="fab fa-instagram"></i>
+            <a href="https://www.instagram.com/vlemrc/">@vlemrc</a>
           </div>
-      </div>
-  </aside>
-    <p>
+        </div>
+      <p>
         Copyright © 2020 M.LEMERCIER, Inc.
-    </p>
+      </p>
 </footer>
 </body>
 </html>
